fix: re-size video and center alignment of videos list and align paragraph content with video list on live page in media query ipad landscape

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1356,7 +1356,7 @@ input[type=reset]{
        clear: both;
        margin-top: 50px;
        padding-top:  50px;
-       padding-bottom: 40px;
+
        padding-left: 510px;
    }
 
@@ -1370,22 +1370,32 @@ input[type=reset]{
      margin-left: 10px;
    }
    iframe {
-      width: 240px;
+
+     /*increase width of videos*/
+      width: 280px;
+
       height: 200px;
   }
   .position-videolist
   {
       margin-top: 70px;
-      padding-left: 80px;
+
+      padding-left: 70px;
+
+      padding-top: 70px;
+      
       width: 900px;
   }
   .item-video{
       display: inline;
   }
   .ToFindOut p {
-    padding-left: 120px;
-    margin-left: 120px;
+    
+    padding-left: 0px;
+    margin-left: 20px;
+    
     font-size: 100%;
+    width: 900px;
   }
   .star-wrapper-pos{
     margin-top: 120px;
